--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>PDF Metadata</h1>
+    <a href="{{ url_for('filter') }}">Filter Metadata</a>
     <table>
         <thead>
             <tr>
