--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,22 @@
 </head>
 <body>
     <h1>PDF Metadata</h1>
-    <a href="{{ url_for('filter') }}">Filter Metadata</a>
+    <form method="POST">
+        <label for="field">Field:</label>
+        <select name="field" id="field">
+            <option value="title">Title</option>
+            <option value="authors">Authors</option>
+            <option value="year">Year</option>
+            <option value="keywords">Keywords</option>
+            <option value="main_finding">Main Finding</option>
+            <option value="abstract">Abstract</option>
+        </select>
+        <br><br>
+        <label for="pattern">Pattern:</label>
+        <input type="text" id="pattern" name="pattern" required>
+        <br><br>
+        <button type="submit">Filter</button>
+    </form>
     <table>
         <thead>
             <tr>
