--- a/templates/view.html
+++ b/templates/view.html
@@ -12,6 +12,8 @@
     <p><strong>Keywords:</strong> {{ metadata['keywords'] }}</p>
     <p><strong>Main Finding:</strong> {{ metadata['main_finding'] }}</p>
     <p><strong>Abstract:</strong> {{ metadata['abstract'] }}</p>
+    <p><strong>subtopic:</strong> {{ metadata['subtopic'] }}</p>
+    <p><strong>RQ:</strong> {{ metadata['rq'] }}</p>
     <p><strong>Path:</strong> {{ metadata['path'] }}</p>
     <p><a href="{{ url_for('index') }}">Back to list</a></p>
 </body>
